--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.25.3",
@@ -23,6 +24,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "fibers": "^5.0.3",
     "node-sass": "^8.0.0",
+    "push-dir": "^0.4.1",
     "sass": "^1.57.0",
     "sass-loader": "^10.4.1"
   }
