--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/i18n": "7.3.0",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/svg": "^0.4.0",
     "fibers": "^5.0.3",
     "node-sass": "^8.0.0",
     "push-dir": "^0.4.1",
