--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "core-js": "^3.25.3",
     "include-media": "^1.4.10",
     "normalize.css": "^8.0.1",
@@ -25,6 +26,7 @@
     "@nuxtjs/svg": "^0.4.0",
     "fibers": "^5.0.3",
     "node-sass": "^8.0.0",
+    "nuxt-purgecss": "^2.0.0",
     "push-dir": "^0.4.1",
     "sass": "^1.57.0",
     "sass-loader": "^10.4.1"
